--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           </li>
           <li class="nav-item text-white"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="#">Services</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="#">Portfolio</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="#">Team</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="#">Blog</a></li>
 
           <li class="nav-item dropdown">
