--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li class="nav-item">
             <a class="nav-link active rounded-pill px-3 bg-warning" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item text-white"><a class="nav-link" href="#">About</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="#">Services</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="About.html">About</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="#Service">Services</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="#">Blog</a></li>
