--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="#">Blog</a></li>
+           <li class="nav-item text-white"><a class="nav-link" href="contact.html">Contact</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
@@ -91,6 +92,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
