--- a/team.html
+++ b/team.html
@@ -7,6 +7,42 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#"><h2>Selecao</h2></a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active rounded-pill px-3 bg-warning" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item text-white"><a class="nav-link" href="About.html">About</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="#Service">Services</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="#">Blog</a></li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu dropdown-menu-white">
+              <li><a class="dropdown-item" href="#">Dropdown 1</a></li>
+              <li><a class="dropdown-item" href="#">Dropdown 2</a></li>
+              <li><a class="dropdown-item" href="#">Dropdown 3</a></li>
+              <li><a class="dropdown-item" href="#">Dropdown 4</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <div class="text-center mb-5">
     <p class="text-uppercase text-start text-muted mb-1 " style="letter-spacing: 2px;"> Team</p>
