--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <a class="nav-link active rounded-pill px-3 bg-warning" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item text-white"><a class="nav-link" href="About.html">About</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="#Service">Services</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="About.html">Services</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="#">Blog</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="blog.html">Blog</a></li>
            <li class="nav-item text-white"><a class="nav-link" href="contact.html">Contact</a></li>
 
           <li class="nav-item dropdown">
@@ -92,6 +92,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
