git commit -m "recuperer les modifications "

--- a/About.html
+++ b/About.html
@@ -24,10 +24,11 @@
             <a class="nav-link active rounded-pill px-3 bg-warning" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item text-white"><a class="nav-link" href="About.html">About</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="#Service">Services</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="About.html">Services</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="#">Blog</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="blog.html">Blog</a></li>
+          <li class="nav-item text-white"><a class="nav-link" href="contact.html">Contact</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
@@ -122,7 +123,7 @@
                 </p>
             </div>
             <div class="col-lg-6">
-                <img src="image/working-1.jpg" alt="Laptop photo" class="img-fluid rounded">
+                <img src="images/working-1.jpg" alt="Laptop photo" class="img-fluid rounded">
             </div>
         </div>
     </div>
