recuperer les modifications

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#"><h2>Selecao</h2></a>
+      <a class="navbar-brand fw-bold" href="index.html"><h2>Selecao</h2></a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
           <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
           <li class="nav-item text-white"><a class="nav-link" href="blog.html">Blog</a></li>
            <li class="nav-item text-white"><a class="nav-link" href="contact.html">Contact</a></li>
-           
+
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
