--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#"><h2>Selecao</h2></a>
+      <a class="navbar-brand fw-bold" href="index.html"><h2>Selecao</h2></a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
