--- a/About.html
+++ b/About.html
@@ -123,7 +123,7 @@
                 </p>
             </div>
             <div class="col-lg-6">
-                <img src="images/working-1.jpg" alt="Laptop photo" class="img-fluid rounded">
+                <img src="image/working-1.jpg" alt="Laptop photo" class="img-fluid rounded">
             </div>
         </div>
     </div>
